parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARE declarations BEGIN commands END
Rule 2     program -> BEGIN commands END
Rule 3     declarations -> declarations COMMA ID
Rule 4     declarations -> declarations COMMA ID LEFT NUMBER COLON NUMBER RIGHT
Rule 5     declarations -> ID
Rule 6     declarations -> ID LEFT NUMBER COLON NUMBER RIGHT
Rule 7     commands -> commands command
Rule 8     commands -> command
Rule 9     command -> identifier ASSIGN expression SEMICOLON
Rule 10    command -> IF condition THEN commands ENDIF
Rule 11    command -> IF condition THEN commands ELSE commands ENDIF
Rule 12    command -> WHILE condition DO commands ENDWHILE
Rule 13    command -> REPEAT commands UNTIL condition SEMICOLON
Rule 14    iterator -> ID
Rule 15    command -> FOR iterator FROM value TO value DO commands ENDFOR
Rule 16    command -> FOR iterator FROM value DOWNTO value DO commands ENDFOR
Rule 17    command -> READ identifier SEMICOLON
Rule 18    command -> WRITE value SEMICOLON
Rule 19    expression -> value
Rule 20    expression -> value PLUS value
Rule 21    expression -> value MINUS value
Rule 22    expression -> value MULT value
Rule 23    expression -> value DIV value
Rule 24    expression -> value MOD value
Rule 25    condition -> value EQ value
Rule 26    condition -> value NEQ value
Rule 27    condition -> value LT value
Rule 28    condition -> value GT value
Rule 29    condition -> value LEQ value
Rule 30    condition -> value GEQ value
Rule 31    value -> NUMBER
Rule 32    value -> identifier
Rule 33    identifier -> ID
Rule 34    identifier -> ID LEFT ID RIGHT
Rule 35    identifier -> ID LEFT NUMBER RIGHT

Terminals, with rules where they appear

ASSIGN               : 9
BEGIN                : 1 2
COLON                : 4 6
COMMA                : 3 4
DECLARE              : 1
DIV                  : 23
DO                   : 12 15 16
DOWNTO               : 16
ELSE                 : 11
END                  : 1 2
ENDFOR               : 15 16
ENDIF                : 10 11
ENDWHILE             : 12
EQ                   : 25
FOR                  : 15 16
FROM                 : 15 16
GEQ                  : 30
GT                   : 28
ID                   : 3 4 5 6 14 33 34 34 35
IF                   : 10 11
LEFT                 : 4 6 34 35
LEQ                  : 29
LT                   : 27
MINUS                : 21
MOD                  : 24
MULT                 : 22
NEQ                  : 26
NUMBER               : 4 4 6 6 31 35
PLUS                 : 20
READ                 : 17
REPEAT               : 13
RIGHT                : 4 6 34 35
SEMICOLON            : 9 13 17 18
THEN                 : 10 11
TO                   : 15
UNTIL                : 13
WHILE                : 12
WRITE                : 18
error                : 

Nonterminals, with rules where they appear

command              : 7 8
commands             : 1 2 7 10 11 11 12 13 15 16
condition            : 10 11 12 13
declarations         : 1 3 4
expression           : 9
identifier           : 9 17 32
iterator             : 15 16
program              : 0
value                : 15 15 16 16 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARE declarations BEGIN commands END
    (2) program -> . BEGIN commands END

    DECLARE         shift and go to state 2
    BEGIN           shift and go to state 3

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARE . declarations BEGIN commands END
    (3) declarations -> . declarations COMMA ID
    (4) declarations -> . declarations COMMA ID LEFT NUMBER COLON NUMBER RIGHT
    (5) declarations -> . ID
    (6) declarations -> . ID LEFT NUMBER COLON NUMBER RIGHT

    ID              shift and go to state 5

    declarations                   shift and go to state 4

state 3

    (2) program -> BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    commands                       shift and go to state 6
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 4

    (1) program -> DECLARE declarations . BEGIN commands END
    (3) declarations -> declarations . COMMA ID
    (4) declarations -> declarations . COMMA ID LEFT NUMBER COLON NUMBER RIGHT

    BEGIN           shift and go to state 16
    COMMA           shift and go to state 17


state 5

    (5) declarations -> ID .
    (6) declarations -> ID . LEFT NUMBER COLON NUMBER RIGHT

    BEGIN           reduce using rule 5 (declarations -> ID .)
    COMMA           reduce using rule 5 (declarations -> ID .)
    LEFT            shift and go to state 18


state 6

    (2) program -> BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    END             shift and go to state 19
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    command                        shift and go to state 20
    identifier                     shift and go to state 8

state 7

    (8) commands -> command .

    END             reduce using rule 8 (commands -> command .)
    IF              reduce using rule 8 (commands -> command .)
    WHILE           reduce using rule 8 (commands -> command .)
    REPEAT          reduce using rule 8 (commands -> command .)
    FOR             reduce using rule 8 (commands -> command .)
    READ            reduce using rule 8 (commands -> command .)
    WRITE           reduce using rule 8 (commands -> command .)
    ID              reduce using rule 8 (commands -> command .)
    UNTIL           reduce using rule 8 (commands -> command .)
    ENDIF           reduce using rule 8 (commands -> command .)
    ELSE            reduce using rule 8 (commands -> command .)
    ENDWHILE        reduce using rule 8 (commands -> command .)
    ENDFOR          reduce using rule 8 (commands -> command .)


state 8

    (9) command -> identifier . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 21


state 9

    (10) command -> IF . condition THEN commands ENDIF
    (11) command -> IF . condition THEN commands ELSE commands ENDIF
    (25) condition -> . value EQ value
    (26) condition -> . value NEQ value
    (27) condition -> . value LT value
    (28) condition -> . value GT value
    (29) condition -> . value LEQ value
    (30) condition -> . value GEQ value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    condition                      shift and go to state 22
    value                          shift and go to state 23
    identifier                     shift and go to state 25

state 10

    (12) command -> WHILE . condition DO commands ENDWHILE
    (25) condition -> . value EQ value
    (26) condition -> . value NEQ value
    (27) condition -> . value LT value
    (28) condition -> . value GT value
    (29) condition -> . value LEQ value
    (30) condition -> . value GEQ value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    condition                      shift and go to state 26
    value                          shift and go to state 23
    identifier                     shift and go to state 25

state 11

    (13) command -> REPEAT . commands UNTIL condition SEMICOLON
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    commands                       shift and go to state 27
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 12

    (15) command -> FOR . iterator FROM value TO value DO commands ENDFOR
    (16) command -> FOR . iterator FROM value DOWNTO value DO commands ENDFOR
    (14) iterator -> . ID

    ID              shift and go to state 29

    iterator                       shift and go to state 28

state 13

    (17) command -> READ . identifier SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    ID              shift and go to state 15

    identifier                     shift and go to state 30

state 14

    (18) command -> WRITE . value SEMICOLON
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 31
    identifier                     shift and go to state 25

state 15

    (33) identifier -> ID .
    (34) identifier -> ID . LEFT ID RIGHT
    (35) identifier -> ID . LEFT NUMBER RIGHT

    ASSIGN          reduce using rule 33 (identifier -> ID .)
    EQ              reduce using rule 33 (identifier -> ID .)
    NEQ             reduce using rule 33 (identifier -> ID .)
    LT              reduce using rule 33 (identifier -> ID .)
    GT              reduce using rule 33 (identifier -> ID .)
    LEQ             reduce using rule 33 (identifier -> ID .)
    GEQ             reduce using rule 33 (identifier -> ID .)
    SEMICOLON       reduce using rule 33 (identifier -> ID .)
    PLUS            reduce using rule 33 (identifier -> ID .)
    MINUS           reduce using rule 33 (identifier -> ID .)
    MULT            reduce using rule 33 (identifier -> ID .)
    DIV             reduce using rule 33 (identifier -> ID .)
    MOD             reduce using rule 33 (identifier -> ID .)
    THEN            reduce using rule 33 (identifier -> ID .)
    DO              reduce using rule 33 (identifier -> ID .)
    TO              reduce using rule 33 (identifier -> ID .)
    DOWNTO          reduce using rule 33 (identifier -> ID .)
    LEFT            shift and go to state 32


state 16

    (1) program -> DECLARE declarations BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    commands                       shift and go to state 33
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 17

    (3) declarations -> declarations COMMA . ID
    (4) declarations -> declarations COMMA . ID LEFT NUMBER COLON NUMBER RIGHT

    ID              shift and go to state 34


state 18

    (6) declarations -> ID LEFT . NUMBER COLON NUMBER RIGHT

    NUMBER          shift and go to state 35


state 19

    (2) program -> BEGIN commands END .

    $end            reduce using rule 2 (program -> BEGIN commands END .)


state 20

    (7) commands -> commands command .

    END             reduce using rule 7 (commands -> commands command .)
    IF              reduce using rule 7 (commands -> commands command .)
    WHILE           reduce using rule 7 (commands -> commands command .)
    REPEAT          reduce using rule 7 (commands -> commands command .)
    FOR             reduce using rule 7 (commands -> commands command .)
    READ            reduce using rule 7 (commands -> commands command .)
    WRITE           reduce using rule 7 (commands -> commands command .)
    ID              reduce using rule 7 (commands -> commands command .)
    UNTIL           reduce using rule 7 (commands -> commands command .)
    ENDIF           reduce using rule 7 (commands -> commands command .)
    ELSE            reduce using rule 7 (commands -> commands command .)
    ENDWHILE        reduce using rule 7 (commands -> commands command .)
    ENDFOR          reduce using rule 7 (commands -> commands command .)


state 21

    (9) command -> identifier ASSIGN . expression SEMICOLON
    (19) expression -> . value
    (20) expression -> . value PLUS value
    (21) expression -> . value MINUS value
    (22) expression -> . value MULT value
    (23) expression -> . value DIV value
    (24) expression -> . value MOD value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    identifier                     shift and go to state 25
    expression                     shift and go to state 36
    value                          shift and go to state 37

state 22

    (10) command -> IF condition . THEN commands ENDIF
    (11) command -> IF condition . THEN commands ELSE commands ENDIF

    THEN            shift and go to state 38


state 23

    (25) condition -> value . EQ value
    (26) condition -> value . NEQ value
    (27) condition -> value . LT value
    (28) condition -> value . GT value
    (29) condition -> value . LEQ value
    (30) condition -> value . GEQ value

    EQ              shift and go to state 39
    NEQ             shift and go to state 40
    LT              shift and go to state 41
    GT              shift and go to state 42
    LEQ             shift and go to state 43
    GEQ             shift and go to state 44


state 24

    (31) value -> NUMBER .

    EQ              reduce using rule 31 (value -> NUMBER .)
    NEQ             reduce using rule 31 (value -> NUMBER .)
    LT              reduce using rule 31 (value -> NUMBER .)
    GT              reduce using rule 31 (value -> NUMBER .)
    LEQ             reduce using rule 31 (value -> NUMBER .)
    GEQ             reduce using rule 31 (value -> NUMBER .)
    SEMICOLON       reduce using rule 31 (value -> NUMBER .)
    PLUS            reduce using rule 31 (value -> NUMBER .)
    MINUS           reduce using rule 31 (value -> NUMBER .)
    MULT            reduce using rule 31 (value -> NUMBER .)
    DIV             reduce using rule 31 (value -> NUMBER .)
    MOD             reduce using rule 31 (value -> NUMBER .)
    THEN            reduce using rule 31 (value -> NUMBER .)
    DO              reduce using rule 31 (value -> NUMBER .)
    TO              reduce using rule 31 (value -> NUMBER .)
    DOWNTO          reduce using rule 31 (value -> NUMBER .)


state 25

    (32) value -> identifier .

    EQ              reduce using rule 32 (value -> identifier .)
    NEQ             reduce using rule 32 (value -> identifier .)
    LT              reduce using rule 32 (value -> identifier .)
    GT              reduce using rule 32 (value -> identifier .)
    LEQ             reduce using rule 32 (value -> identifier .)
    GEQ             reduce using rule 32 (value -> identifier .)
    SEMICOLON       reduce using rule 32 (value -> identifier .)
    PLUS            reduce using rule 32 (value -> identifier .)
    MINUS           reduce using rule 32 (value -> identifier .)
    MULT            reduce using rule 32 (value -> identifier .)
    DIV             reduce using rule 32 (value -> identifier .)
    MOD             reduce using rule 32 (value -> identifier .)
    THEN            reduce using rule 32 (value -> identifier .)
    DO              reduce using rule 32 (value -> identifier .)
    TO              reduce using rule 32 (value -> identifier .)
    DOWNTO          reduce using rule 32 (value -> identifier .)


state 26

    (12) command -> WHILE condition . DO commands ENDWHILE

    DO              shift and go to state 45


state 27

    (13) command -> REPEAT commands . UNTIL condition SEMICOLON
    (7) commands -> commands . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    UNTIL           shift and go to state 46
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    command                        shift and go to state 20
    identifier                     shift and go to state 8

state 28

    (15) command -> FOR iterator . FROM value TO value DO commands ENDFOR
    (16) command -> FOR iterator . FROM value DOWNTO value DO commands ENDFOR

    FROM            shift and go to state 47


state 29

    (14) iterator -> ID .

    FROM            reduce using rule 14 (iterator -> ID .)


state 30

    (17) command -> READ identifier . SEMICOLON

    SEMICOLON       shift and go to state 48


state 31

    (18) command -> WRITE value . SEMICOLON

    SEMICOLON       shift and go to state 49


state 32

    (34) identifier -> ID LEFT . ID RIGHT
    (35) identifier -> ID LEFT . NUMBER RIGHT

    ID              shift and go to state 50
    NUMBER          shift and go to state 51


state 33

    (1) program -> DECLARE declarations BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    END             shift and go to state 52
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    command                        shift and go to state 20
    identifier                     shift and go to state 8

state 34

    (3) declarations -> declarations COMMA ID .
    (4) declarations -> declarations COMMA ID . LEFT NUMBER COLON NUMBER RIGHT

    BEGIN           reduce using rule 3 (declarations -> declarations COMMA ID .)
    COMMA           reduce using rule 3 (declarations -> declarations COMMA ID .)
    LEFT            shift and go to state 53


state 35

    (6) declarations -> ID LEFT NUMBER . COLON NUMBER RIGHT

    COLON           shift and go to state 54


state 36

    (9) command -> identifier ASSIGN expression . SEMICOLON

    SEMICOLON       shift and go to state 55


state 37

    (19) expression -> value .
    (20) expression -> value . PLUS value
    (21) expression -> value . MINUS value
    (22) expression -> value . MULT value
    (23) expression -> value . DIV value
    (24) expression -> value . MOD value

    SEMICOLON       reduce using rule 19 (expression -> value .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    MULT            shift and go to state 58
    DIV             shift and go to state 59
    MOD             shift and go to state 60


state 38

    (10) command -> IF condition THEN . commands ENDIF
    (11) command -> IF condition THEN . commands ELSE commands ENDIF
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    commands                       shift and go to state 61
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 39

    (25) condition -> value EQ . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 62
    identifier                     shift and go to state 25

state 40

    (26) condition -> value NEQ . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 63
    identifier                     shift and go to state 25

state 41

    (27) condition -> value LT . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 64
    identifier                     shift and go to state 25

state 42

    (28) condition -> value GT . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 65
    identifier                     shift and go to state 25

state 43

    (29) condition -> value LEQ . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 66
    identifier                     shift and go to state 25

state 44

    (30) condition -> value GEQ . value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    value                          shift and go to state 67
    identifier                     shift and go to state 25

state 45

    (12) command -> WHILE condition DO . commands ENDWHILE
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . IF condition THEN commands ENDIF
    (11) command -> . IF condition THEN commands ELSE commands ENDIF
    (12) command -> . WHILE condition DO commands ENDWHILE
    (13) command -> . REPEAT commands UNTIL condition SEMICOLON
    (15) command -> . FOR iterator FROM value TO value DO commands ENDFOR
    (16) command -> . FOR iterator FROM value DOWNTO value DO commands ENDFOR
    (17) command -> . READ identifier SEMICOLON
    (18) command -> . WRITE value SEMICOLON
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    REPEAT          shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    commands                       shift and go to state 68
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 46

    (13) command -> REPEAT commands UNTIL . condition SEMICOLON
    (25) condition -> . value EQ value
    (26) condition -> . value NEQ value
    (27) condition -> . value LT value
    (28) condition -> . value GT value
    (29) condition -> . value LEQ value
    (30) condition -> . value GEQ value
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15

    condition                      shift and go to state 69
    value                          shift and go to state 23
    identifier                     shift and go to state 25

state 47

    (15) command -> FOR iterator FROM . value TO value DO commands ENDFOR
    (16) command -> FOR iterator FROM . value DOWNTO value DO commands ENDFOR
    (31) value -> . NUMBER
    (32) value -> . identifier
    (33) identifier -> . ID
    (34) identifier -> . ID LEFT ID RIGHT
    (35) identifier -> . ID LEFT NUMBER RIGHT

    NUMBER          shift and go to state 24
    ID              shift and go to state 15
